Disable RPC configuration for Neutron with OVN in CI
Needed-By: https://review.opendev.org/c/openstack/openstack-ansible-os_neutron/+/907245/
Change-Id: Ie95ea833b7e63dfa5814673ba19011e833e0e952
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/tests/roles/bootstrap-host/templates/user_variables.aio.yml.j2
+++ b/tests/roles/bootstrap-host/templates/user_variables.aio.yml.j2
@@ -134,7 +134,8 @@ nova_metadata_workers: 1
 nova_scheduler_workers: 1
 
 ## Neutron
-neutron_rpc_workers: 1
+neutron_rpc_workers: {{ (_neutron_plugin_driver != 'ml2.ovn') | ternary('1', '0') }}
+neutron_use_rpc: {{ (_neutron_plugin_driver != 'ml2.ovn') }}
 neutron_metadata_workers: 1
 neutron_api_workers: 1
 neutron_api_threads: 2
