Offload network provisionment for AIO to openstack_hosts
For couple of cycles we include our systemd-related roles in
openstack_hosts role, with purpose of operators being able to
configure their nodes before any actuall service or infra role will
kick in.

This should also provide ability to configure networking for LXC and
setup overall.

So with moving systemd role includes during AIO setup to
variables which leverage openstack_hosts behavior we achieve
multiple goals at once:
- Reduce amount of intersecting logic in AIO bootstrap
- Add testing for openstack_hosts section and ensure it's functional
- Improve transparency for deployers and ability to see and change
network configuration, as it will be templated as variables file
instead of be directly applied.

As a consequence, we need to access host by it's already established
IP address, rather then one defined by us.
However, we already require having `bootstrap_host_public_address`
and rely on it heavily, so it should not bring much regressions
with the approach.

Depends-On: https://review.opendev.org/c/openstack/openstack-ansible-haproxy_server/+/953670
Depends-On: https://review.opendev.org/c/openstack/openstack-ansible/+/954316
Change-Id: Ib688a5a758ec5ebbd0ebafdcaf2b27aeecdd9aba
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/etc/openstack_deploy/openstack_user_config.yml.aio.j2
+++ b/etc/openstack_deploy/openstack_user_config.yml.aio.j2
@@ -184,7 +184,8 @@ global_overrides:
 # keystone
 identity_hosts:
   aio1:
-    ip: {{ bootstrap_host_management_address }}
+    ip: {{ bootstrap_host_public_address }}
+    management_ip: {{ bootstrap_host_management_address }}
 {% if 'keystone' in bootstrap_host_scenarios or 'infra' in bootstrap_host_scenarios %}
 #   NOTE (jrosser) this ensures that we deploy 3 keystone containers
 #   during the os_keystone role test to validate ssh keys and fernet key sync
@@ -197,7 +198,8 @@ identity_hosts:
 # galera, memcache, rabbitmq, utility
 shared-infra_hosts:
   aio1:
-    ip: {{ bootstrap_host_management_address }}
+    ip: {{ bootstrap_host_public_address }}
+    management_ip: {{ bootstrap_host_management_address }}
 {% if 'infra' in bootstrap_host_scenarios_expanded %}
     affinity:
       galera_container: 3
@@ -215,12 +217,14 @@ repo-infra_hosts:
     affinity:
       repo_container: 3
 {% endif %}
-    ip: {{ bootstrap_host_management_address }}
+    ip: {{ bootstrap_host_public_address }}
+    management_ip: {{ bootstrap_host_management_address }}
 
 {% if 'zookeeper' in bootstrap_host_scenarios_expanded %}
 coordination_hosts:
   aio1:
-    ip: {{ bootstrap_host_management_address }}
+    ip: {{ bootstrap_host_public_address }}
+    management_ip:{{ bootstrap_host_management_address }}
 {% if 'infra' in bootstrap_host_scenarios_expanded %}
     affinity:
       zookeeper_container: 3
