Offload kernel module management to openstack_hosts
With [1] being implemented, we are having quite a good baseline
for managing kernel modules in openstack_hosts role.

So we can offload module management to the role alike to
networking configuration.

Also, 8021q is laready present and managed there [2].

[1] https://review.opendev.org/c/openstack/openstack-ansible-openstack_hosts/+/951852
[2] https://opendev.org/openstack/openstack-ansible-openstack_hosts/src/commit/26deaeb701564b9b2059bab92104d24638f49674/vars/debian.yml#L25

Change-Id: I599d75dcc24cbcfa594cf1293e4c629b2c117c4a
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/tests/roles/bootstrap-host/templates/user_variables.aio.yml.j2
+++ b/tests/roles/bootstrap-host/templates/user_variables.aio.yml.j2
@@ -48,6 +48,7 @@ openstack_hosts_journald_config:
 openstack_hosts_systemd_services: "{{ query('vars', *query('varnames', '^aio_systemd_services_')) | flatten(levels=1) }}"
 openstack_hosts_systemd_networkd_networks: "{{ query('vars', *query('varnames', '^aio_systemd_networkd_networks_')) | flatten(levels=1) }}"
 openstack_hosts_systemd_networkd_devices: "{{ query('vars', *query('varnames', '^aio_systemd_networkd_devices_')) | flatten(levels=1) }}"
+openstack_host_specific_kernel_modules: "{{ query('vars', *query('varnames', '^aio1_kernel_modules_')) | flatten(levels=1) }}"
 openstack_hosts_systemd_networkd_prefix: "osa_testing"
 {% endraw %}
 
