--- a/etc/openstack_deploy/openstack_user_config.yml.aio.j2
+++ b/etc/openstack_deploy/openstack_user_config.yml.aio.j2
@@ -95,7 +95,11 @@ global_overrides:
         type: "flat"
         net_name: "dbaas-mgmt"
         group_binds:
+{% if 'ovs' in bootstrap_host_scenarios_expanded %}
+          - neutron_openvswitch_agent
+{% else %}
           - neutron_ovn_gateway
+{% endif %}
           - rabbitmq
 {% endif %}
 {% if 'octavia' in bootstrap_host_scenarios_expanded %}
@@ -108,7 +112,11 @@ global_overrides:
         type: "flat"
         net_name: "lbaas"
         group_binds:
+{% if 'ovs' in bootstrap_host_scenarios_expanded %}
+          - neutron_openvswitch_agent
+{% else %}
           - neutron_ovn_gateway
+{% endif %}
           - octavia-worker
           - octavia-housekeeping
           - octavia-health-manager
