aio: fix octavia/trove when used with ovs
If this is backported to 2024.2 or beyond, it additionally
requires handling for lxb.

Change-Id: I9d1b27eacf8a3c8cbd5e4fbdff53a3064604c496
Signed-off-by: Andrew Bonney <andrew.bonney@bbc.co.uk>

--- a/etc/openstack_deploy/openstack_user_config.yml.aio.j2
+++ b/etc/openstack_deploy/openstack_user_config.yml.aio.j2
@@ -99,7 +99,11 @@ global_overrides:
         type: "flat"
         net_name: "dbaas-mgmt"
         group_binds:
+{% if 'ovs' in bootstrap_host_scenarios_expanded %}
+          - neutron_openvswitch_agent
+{% else %}
           - neutron_ovn_gateway
+{% endif %}
           - rabbitmq
 {% endif %}
 {% if 'octavia' in bootstrap_host_scenarios_expanded %}
@@ -112,7 +116,11 @@ global_overrides:
         type: "flat"
         net_name: "lbaas"
         group_binds:
+{% if 'ovs' in bootstrap_host_scenarios_expanded %}
+          - neutron_openvswitch_agent
+{% else %}
           - neutron_ovn_gateway
+{% endif %}
           - octavia-worker
           - octavia-housekeeping
           - octavia-health-manager
